<resources>

    <string name="app_name">Asystent nauczyciela</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="students">Studenci</string>
    <string name="subjects">Przedmioty</string>
    <string name="create_student">Dodaj Studenta</string>
    <string name="create_subject">Dodaj Przedmiot</string>
    <string name="student_name">Imię</string>
    <string name="student_second_name">Nazwisko</string>
    <string name="student_number">Numer albumu</string>
    <string name="student_add">Dodaj studenta</string>
    <string name="subject_name">Nazwa</string>
    <string name="subject_add">Dodaj przedmiot</string>
    <string name="subject_day">Dzień tygodnia</string>
    <string name="subject_time">10:00–12:30</string>
    <string name="term_classes">Termin zajęć</string>
    <string name="dash">-</string>
    <string name="subject_name_info">Podaj nazwę przedmiotu</string>
    <string name="subject_time_info">Godziny muszą się od siebie różnić</string>
    <string name="student_name_info">Podaj imię studenta</string>
    <string name="student_second_name_info">Podaj nazwisko studenta</string>
    <string name="student_number_info">Numer albumu powinien składać się z 6 cyfr</string>
    <string name="students_list">Lista studentów :</string>
    <string name="students_add">Dodaj studentów</string>
    <string name="grade_add">Dodaj ocenę</string>
    <string name="delete_info">Czy na pewno chcesz usunąć wszystkie dane ?</string>
    <string name="delete_button">Usuń wszystkie dane</string>
    <string name="delete_title">Usuwanie danych</string>

    <string-array name="days_of_week">
        <item>Poniedziałek</item>
        <item>Wtorek</item>
        <item>Środa</item>
        <item>Czwartek</item>
        <item>Piątek</item>
        <item>Sobota</item>
        <item>Niedziela</item>
    </string-array>

    <string-array name="grades">
        <item>2</item>
        <item>3</item>
        <item>3.5</item>
        <item>4</item>
        <item>4.5</item>
        <item>5</item>
    </string-array>

</resources>