<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.students.create.CreateStudentFragment">

    <data>

        <variable
            name="viewModel"
            type="com.mo.dziennikocen.ui.students.create.CreateStudentViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:id="@+id/relativeLayout"
            style="@style/ActionBar"
            android:layout_width="match_parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                style="@style/ItemActionBar.Title"
                android:text="@string/create_student" />

        </RelativeLayout>

        <ScrollView
            android:id="@+id/scrollView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/relativeLayout">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <EditText
                    android:id="@+id/studentName"
                    style="@style/EditText"
                    android:layout_width="match_parent"
                    android:layout_marginVertical="48dp"
                    android:hint="@string/student_name" />

                <EditText
                    android:id="@+id/studentSecondName"
                    style="@style/EditText"
                    android:layout_width="match_parent"
                    android:layout_marginVertical="48dp"
                    android:hint="@string/student_second_name" />

                <EditText
                    android:id="@+id/studentNumber"
                    style="@style/EditText"
                    android:layout_width="match_parent"
                    android:layout_marginVertical="48dp"
                    android:hint="@string/student_number" />

                <Button
                    android:id="@+id/studentCreate"
                    style="@style/Button"
                    android:layout_width="match_parent"
                    android:enabled="@{viewModel.areInputsCorrect}"
                    android:text="@string/student_add"
                    android:layout_marginVertical="48dp" />

            </LinearLayout>

        </ScrollView>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>