<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.deletedata.DeleteDataDialogFragment">

    <data>

        <variable
            name="viewModel"
            type="com.mo.dziennikocen.ui.deletedata.DeleteDataViewModel" />
    </data>

    <LinearLayout
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical">

        <RelativeLayout
            style="@style/ActionBar"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginBottom="8dp">

            <TextView
                style="@style/ItemActionBar.Title"
                android:text="@string/delete_title"
                android:textSize="20sp" />

        </RelativeLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="8dp"
            android:layout_marginBottom="8dp"
            android:text="@string/delete_info"
            android:textSize="20sp" />

        <Button
            android:id="@+id/deleteButton"
            style="@style/Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/delete_button" />

    </LinearLayout>

</layout>