<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.menu.MenuFragment">

    <data>

        <variable
            name="viewModel"
            type="com.mo.dziennikocen.ui.menu.MenuViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:id="@+id/relativeLayout"
            style="@style/ActionBar"
            android:layout_width="match_parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                style="@style/ItemActionBar.Title"
                android:text="@string/app_name" />

            <ImageButton
                android:id="@+id/deleteButton"
                style="@style/ItemActionBar.Image"
                android:src="@drawable/ic_baseline_delete_24" />

        </RelativeLayout>

        <Button
            android:id="@+id/subjectsButton"
            style="@style/Button"
            android:layout_width="match_parent"
            android:text="@string/subjects"
            app:layout_constraintBottom_toTopOf="@id/studentsButton"
            app:layout_constraintTop_toBottomOf="@+id/relativeLayout" />

        <Button
            android:id="@+id/studentsButton"
            style="@style/Button"
            android:layout_width="match_parent"
            android:text="@string/students"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@id/subjectsButton" />

    </androidx.constraintlayout.widget.ConstraintLayout>


</layout>